[package]
name = "macros-example"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="*",features=["full", "fold", "extra-traits"]}
quote = "*"
